--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
-# Backend Configuration
-VITE_API_BASE_URL=http://localhost:5000
-
-# Supabase Configuration
-VITE_SUPABASE_URL=your-supabase-url
+# Supabase Configuration - Get these from your Supabase project settings
+VITE_SUPABASE_URL=your-supabase-project-url
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
-# MongoDB Configuration (Server-side only)
-MONGODB_URI=mongodb://localhost:27017/bakery
+# Backend API URL (if using a separate backend)
+VITE_API_BASE_URL=http://localhost:5000
